@@ -81,7 +81,13 @@ int vorbis_get_sample_rate() {
 	return sample_rate;
 }
 
-int vorbis_read(unsigned char *buf, int len, int bigendian) {
+int vorbis_read(unsigned char *buf, int len) {
+#ifdef WORDS_BIGENDIAN
+	static int bigendian = 1;
+#else
+	static int bigendian = 0;
+#endif
+
 	return ov_read(&track, buf, len, bigendian, 2, 1, NULL);
 }
 
